--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,44 @@ version: "3"
 
 services:
   sonarqube:
-    image: sonarqube
-    expose:
-      - 9000
-    ports:
-      - "127.0.0.1:9000:9000"
+    container_name: sonarqube
+    depends_on:
+      - db
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
+    image: sonarqube:community
     networks:
       - sonarnet
-    environment:
-      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
-      - SONARQUBE_JDBC_USERNAME=sonar
-      - SONARQUBE_JDBC_PASSWORD=sonar
+    ports:
+      - 9000:9000
     volumes:
-      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_temp:/opt/sonarqube/temp
 
   db:
-    image: postgres
-    networks:
-      - sonarnet
+    container_name: sonarqube_postgres
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
+    image: postgres
+    networks:
+      - sonarnet
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
 
 networks:
   sonarnet:
+    driver: bridge
 
 volumes:
-  sonarqube_conf:
   sonarqube_data:
   sonarqube_extensions:
-  sonarqube_bundled-plugins:
+  sonarqube_logs:
+  sonarqube_temp:
   postgresql:
   postgresql_data:
